--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -92,11 +92,14 @@
   <div class="album text-muted">
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 test">
           <img alt="Hotel[100%x280]" style="height: 280px; width:100%;" src="../../../assets/images/Reception.jpg" data-holder-rendered="true">
-          <button type="button" class="btn btn-danger">BookNow</button>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
-            bit longer.</p>
+          <div class="middle">
+            <div class="text">Book Now</div>
+          </div>
+          <button type="button" class="btn btn-danger">
+            <a href="https://www.hotels.com/co38/hotels-in-canada/" rel="follow">BookNow</a>
+          </button>
         </div>
         <div class="col-md-3">
           <img data-src="holder.js/100px280?theme=thumb" alt="Thumbnail [100%x280]" style="height: 280px; width: 100%; display: block;"
@@ -156,7 +159,7 @@
 <section>
   <br>
 
-  <section>
+  <!-- <section>
     <div class="resp-row footer-group contact">
       <div class="section-links">
         <div class="footer-nav-list">
@@ -331,8 +334,8 @@
                   <a href="http://www.expediaaffiliate.com/" id="ftr-sam-private-label" rel="nofollow" target="_blank">Private Label</a>
                 </li>
                 <li>
-                  <a href="http://www.advertising.expedia.com" id="ftr-sam-promote-with-us" rel="nofollow" target="_blank">Promote with Us</a>
-                </li>
+                  <a href="http://www.advertising.expedia.com" id="ftr-sam-promote-with-us" rel="nofollow" target="_blank">Promote with Us</a> -->
+  <!-- </li>
                 <li>
                   <a href="https://travelagencies.venere.com/?lang=en" id="ftr-sam-travel-agents" rel="nofollow" target="_blank">Travel Agents</a>
                 </li>
@@ -394,8 +397,8 @@
               <a href="/site-index/" target="_blank">Site Index</a>
             </li>
           </ul>
-        </div>
-        <div class="copyright">
+        </div> -->
+  <!-- <div class="copyright">
           <p>© 2018 Hotels.com, L.P. All rights reserved.</p>
           <p>Hotels.com and the Hotels.com logo are trademarks or registered trademarks of Hotels.com, LP in the USA and/or
             other countries. All other trademarks are property of their respective owners.</p>
@@ -414,13 +417,81 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
+  <footer class="ch_footer">
+    <div class="ch_footer__top">
+      <div class="ch_wrapper">
+        <div class="ch_footer__top__block ch_footer__top__block--first">
+          <h4>Concert Hotels</h4>
+          <ul>
+            <li>
+              <a href="https://www.concerthotels.com">Home</a>
+            </li>
+          </ul>
+        </div>
+        <div class="ch_footer__top__block ch_footer__top__block--mid">
+          <h4>Extras</h4>
+          <ul>
+            <li>
+              <a href="https://www.concerthotels.com/blog/">Blog</a>
+            </li>
+            <li>
+              <a href="https://reservations.concerthotels.com/hotels/help/privacy/?refid=7534">Privacy Policy</a>
+            </li>
+          </ul>
+        </div>
+        <div class="ch_footer__top__block ch_footer__top__block--mid">
+          <h4>Support</h4>
+          <ul>
+            <li>
+              <a href="https://www.concerthotels.com/contact.action">Contact Us</a>
+            </li>
+
+
+            <li>
+              <a href="https://www.concerthotels.com/about.action">About Us</a>
+            </li>
+
+            <li>
+              <a href="https://www.concerthotels.com/faq.action">FAQ</a>
+            </li>
+          </ul>
+        </div>
+        <div class="ch_footer__top__block ch_footer__top__block--last clearfix">
+          <h4>Follow Us</h4>
+          <ul class="ch_footer__social">
+            <li>
+              <a href="https://www.facebook.com/ConcertHotelsUS" target="_blank">
+                <i>d</i>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/ConcertHotels" target="_blank">
+                <i>m</i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="ch_footer__bottom">
+      <div class="ch_wrapper">
+        <div class="ch_footer__bottom__logo">
+          <img alt="ConcertHotels.com" src="https://www.concerthotels.com/images/logo.png">
+        </div>
+      </div>
+    </div>
+  </footer>
   <div class="footer">
     <footer class="container-fluid text-center">
       <a href="#myPage" title="To Top">
         <span class="glyphicon glyphicon-chevron-up"></span>
       </a>
-      <p> Copyright ©2017 Shortcastle Technologies Pvt Ltd. All Rights Reserved. </p>
+      <p> Copyright © 2018 My Hotels. All Rights Reserved. </p>
+      <p>Stay Close To Your Home
+        <span class="glyphicon glyphicon-heart"></span>
+      </p>
 
     </footer>
   </div>
