--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -418,55 +418,53 @@
       </div>
     </div>
   </section> -->
+  
   <footer class="ch_footer">
-    <div class="ch_footer__top">
-      <div class="ch_wrapper">
-        <div class="ch_footer__top__block ch_footer__top__block--first">
-          <h4>Concert Hotels</h4>
+    <div class="container-fluid text-center">
+      <div class="row">
+        <div class="col-md-3">
+          <h4>My Hotel</h4>
           <ul>
             <li>
-              <a href="https://www.concerthotels.com">Home</a>
+              <a href="">Home</a>
             </li>
           </ul>
         </div>
-        <div class="ch_footer__top__block ch_footer__top__block--mid">
+        <div class="col-md-3">
           <h4>Extras</h4>
           <ul>
             <li>
-              <a href="https://www.concerthotels.com/blog/">Blog</a>
+              <a href="">Blog</a>
             </li>
             <li>
-              <a href="https://reservations.concerthotels.com/hotels/help/privacy/?refid=7534">Privacy Policy</a>
+              <a href="">Privacy Policy</a>
             </li>
           </ul>
         </div>
-        <div class="ch_footer__top__block ch_footer__top__block--mid">
+        <div class="col-md-3">
           <h4>Support</h4>
           <ul>
             <li>
-              <a href="https://www.concerthotels.com/contact.action">Contact Us</a>
+              <a href="">Contact Us</a>
             </li>
-
-
             <li>
-              <a href="https://www.concerthotels.com/about.action">About Us</a>
+              <a href="">About Us</a>
             </li>
-
             <li>
-              <a href="https://www.concerthotels.com/faq.action">FAQ</a>
+              <a href="">FAQ</a>
             </li>
           </ul>
         </div>
-        <div class="ch_footer__top__block ch_footer__top__block--last clearfix">
+        <div class="col-md-3">
           <h4>Follow Us</h4>
           <ul class="ch_footer__social">
             <li>
-              <a href="https://www.facebook.com/ConcertHotelsUS" target="_blank">
+              <a href="" target="_blank">
                 <i>d</i>
               </a>
             </li>
             <li>
-              <a href="https://twitter.com/ConcertHotels" target="_blank">
+              <a href="" target="_blank">
                 <i>m</i>
               </a>
             </li>
@@ -475,13 +473,13 @@
       </div>
     </div>
 
-    <div class="ch_footer__bottom">
+    <!-- <div class="ch_footer__bottom">
       <div class="ch_wrapper">
         <div class="ch_footer__bottom__logo">
-          <img alt="ConcertHotels.com" src="https://www.concerthotels.com/images/logo.png">
+          <img alt="MyHotels.com" src="../../../assets/images/headicon.png">
         </div>
       </div>
-    </div>
+    </div> -->
   </footer>
   <div class="footer">
     <footer class="container-fluid text-center">
